# tts-audiobook-creator

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml  requirements.txt
audiobook_tts/: epub_to_text.py  tts.py
notebooks/: 01_epub_to_audiobook.ipynb  01_read_epub.ipynb  02_tts.ipynb
sample_data/: Meditations_Marcus_Aurelius.epub
src/: epub_to_text.py
tts_audiobook_creator/: __init__.py  arxiv.py  controller.py  epub_to_text.py  main.py  tts.py  ui.py  utils.py
tts_audiobook_creator/controller/: arxiv_controller.py  arxiv_pipeline_controller.py  audiobook_controller.py
tts_audiobook_creator/to_tts_text_conversion/: ai_to_tts_text_converter.py
tts_audiobook_creator/tts/: __init__.py  openai_tts.py  pyttsx3.py  utils.py  xtts.py
